--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <title>Stocks Dashboard</title>
 </head>
 <body>
+
+    <header id="main-header">
+        <div class="wrapper">
+            <img src="img/logoStock.svg" alt="Logo Stock"/>
+            <h1>Stock <span>Dashboard</span></h1>
+            <button>+</button>
+        </div>
+    </header>
     
+    <div class="modal">
+        <div class="modal-content">
+            <h1>Add Stock</h1>
+        </div>
+    </div>
+
 </body>
 </html>
