--- a/index.html
+++ b/index.html
@@ -13,15 +13,32 @@
         <div class="wrapper">
             <img src="img/logoStock.svg" alt="Logo Stock"/>
             <h1>Stock <span>Dashboard</span></h1>
-            <button>+</button>
+            <button onclick="openModal('#add-stock')">+</button>
         </div>
     </header>
-    
-    <div class="modal">
-        <div class="modal-content">
-            <h1>Add Stock</h1>
+
+    <div class="wrapper" id="tickersList">
+        <div class="ticker">
+            <h2>AMZ</h2>
+            <p>3,172.69</p>
         </div>
     </div>
+    
+    <div class="modal" id="add-stock">
+        <div class="modal-content">
+            <h1>Add Stock</h1>
+            <button class="btn-close" onclick="closeModal('#add-stock')">x</button>
+
+            <form onsubmit="handleAddTicker(event)">
+                <lable for="ticker">Ticker:</lable>
+                <input type="text" name="tickers" id="ticker" />
+                <input type="submit" value="Add Ticker" />
+            </form>
+
+        </div>
+    </div>
+
+    <script src="js/main.js"></script>
 
 </body>
 </html>
