--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         </div>
     </header>
 
-    <div class="wrapper" id="tickersList">
+    <div class="wrapper" id="tickers-list">
         <div class="ticker">
+            <button class="btn-close" onclick="removeTicker(event)">x</button>
             <h2>AMZ</h2>
             <p>3,172.69</p>
         </div>
