--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class="wrapper" id="tickers-list">
         <div class="ticker">
             <button class="btn-close" onclick="removeTicker(event)">x</button>
+            <button class="btn-refresh" onclick="refreshTicker(event)">R</button>
             <h2>AMZ</h2>
             <p>3,172.69</p>
         </div>
